--- a/inregistrare.html
+++ b/inregistrare.html
@@ -1,4 +1,12 @@
-<!-- ...existing code... -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Sneakers Ro | Sign Up/ Log in</title>
+	<link rel="stylesheet" href="styleautentif.css">
+	<script src="snro.js" defer></script>
+</head>
 <body>
 	<div id="loading-screen">
 		<div class="spinner"></div>
@@ -6,5 +14,45 @@
 	<a href="sneakersro.html" class="back-button">
 		<i class="arrow-left">←</i>
 	</a>
-	<!-- ...rest of the code... -->
+	<div class="container">
+		<div class="left">
+			<div class="logo">
+				<h1>SneakersRo</h1>
+				<img src="imagini/shoe-svgrepo-com.svg" class="logo-icon" alt="logo">
+			</div>
+			<p class="slogan">Pasiunea ta, pasul tău – găsește-ți perechea perfectă!</p>
+		</div>
+		<div class="right">
+			<div class="box">
+				<form autocomplete="off">
+					<h2>Inregistrare</h2>
+					<div class="inputBox">
+						<input type="text" required="required">
+						<span>Nume de utilizator</span>
+						<i></i>
+					</div>
+					<div class="inputBox">
+						<input type="password" required="required">
+						<span>Email</span>
+						<i></i>
+					</div>
+					<div class="inputBox">
+						<input type="password" required="required">
+						<span>Parola</span>
+						<i></i>
+					</div>
+					<div class="inputBox">
+						<input type="password" required="required">
+						<span>Repeta Parola</span>
+						<i></i>
+					</div>
+					<div class="links">
+						<a href="inregistrare.html">Înregistrare</a>
+					</div>
+					<input type="submit" value="Autentificare">
+				</form>
+			</div>
+		</div>
+	</div>
 </body>
+</html>
